=== Release 0.6.3 ===

New feature: subsites, i.e. namespaced routes, plus support in the
controller and view layers. Subsites are created automatically for any
directories found in app/controllers. Links default to the current
subsite unless you give a subite="..." attribute. The taglib
app/views/<subsite>/<subsite-name>.dryml is automatically included in
every page in the subsite.

Change to hobo command:

  hobo [...options...] app-name

  instead of

  hobo app-name [...options...]


Migration generator

  Automatically ignores non-Hobo models (and associated tables) 

  Hobo::Migrations.ignore_models is now deprecated.

    Use Hobo::Migrations.ignore to list models that should be
    ignored. The associated tables are ignored too (rarely needed, as
    these are probably not Hobo models anyway)

    Hobo::Migrations.ignore_tables is still supported

  Fix: problems with going back to a nil default from a non-nil
  default.


Hobo model generator

  In line with Rails 2.0, the timestamps declaration is now included
  by default (it's generally something every model should have).


hobo_base.css

  Removed over-zealous styling of too many elements.


hobo_rapid.css

  Change of class names for validation errors.


hobo_rapid.js

  Now silently ignores update to non-existent part. This is convenient
  when parts are being added dynamically, but may prove to be a
  mistake :-)

  Global variable controllerNames is gone. Now use calls to
  Hobo.pluralise. (Gee I guess we should really standardise on
  American spellings)

  The 'fade' parameter to removeButton is now an option. Confirmation
  is now optional too.

  Hobo.partFor returns the part containing a given element. Used in
  the new update="self" feature.

  LowPro behaviour HasManyThroughInput. This is badly named and will
  change.


Core extensions

  alias_tag_chain is like alias_method_chain but for DRYML tags

  SafeNil

    Now more efficient (thanks to "steve d" --
    http://coderrr.wordpress.com)